--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "intasend-node": "^1.1.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "next": "^16.0.7",
     "nodemailer": "^7.0.6",
     "pdfkit": "^0.17.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -46,7 +46,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "eslint-config-next": "^16.0.7",
     "mkcert": "^3.2.0",
     "tailwindcss": "^4",
     "typescript": "^5"
